# automate-jw

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  url_to_omnifocus.py
docs/: readme.md
docs/shortcuts/: get-a-url.md  send-url-to-omnifocus.md
requirements/: dev.txt  main.txt  maint.txt
src/automate-jw/: main.py  process_url.py
src/automate_jw/: main.py  process_url.py
src/automate_jw/functions/: request.py  url.py
src/automate_jw/process_url/: __init__.py
src/automate_jw/process_url/rules/: __init__.py  any_url.py  base.py  substack.py
src/automate_jw/process_url/tasks/: __init__.py  omnifocus.py
src/automate_jw/tests/functions/: test_url.py
